# flight-maneuvering

./: .gitignore  README.md
backend/: pyproject.toml  server.py
backend/recordings/: fa042995.json
backend/sim/: __init__.py  assignment.py  cooperation.py  datalink.py  engine.py  entities.py  envelope.py  environment.py  evasion.py  fusion.py  guidance.py  hmt.py  intercept.py  kalman.py  launcher.py  monte_carlo.py  recording.py  sensor.py  swarm.py  terrain.py  threat.py  vector.py
backend/sim/ml/: __init__.py  features.py  inference.py
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ControlPanel.tsx  HMTToast.tsx  LaunchEventToast.tsx  MissionPlanner.tsx  MissionPlannerPanel.tsx  Scene.tsx
frontend/src/hooks/: useSimulation.ts
